course-03/project/k8s/udagram-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udagram-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: udagram-api
  template:
    metadata:
      labels:
        component: udagram-api
    spec:
      containers:
        - name: udagram-api
          image: denyslins/udagram-api:latest
          ports:
            - containerPort: 8080
