course-03/project/k8s/udagram-api-feed-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udagram-api-feed-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: udagram-api-feed
  template:
    metadata:
      labels:
        component: udagram-api-feed
    spec:
      containers:
        - name: udagram-api-feed
          image: denyslins/udagram-api-feed:latest
          ports:
            - containerPort: 8081
