course-03/project/k8s/udagram-api-feed-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: udagram-api-feed-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: udagram-api-feed
  ports:
    - port: 8081
      targetPort: 8081
