course-03/project/k8s/udagram-api-user-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: udagram-api-user-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: udagram-api-user
  ports:
    - port: 8080
      targetPort: 8080
