course-03/project/k8s/udagram-frontend-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: udagram-frontend-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: udagram-frontend
  ports:
    - port: 8082
      targetPort: 8082
