course-03/project/k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: udagram-frontend-cluster-ip-service
              servicePort: 8082
          - path: /api/v0/user
            backend:
              serviceName: udagram-api-user-cluster-ip-service
              servicePort: 8080
          - path: /api/v0/feed
            backend:
              serviceName: udagram-api-feed-cluster-ip-service
              servicePort: 8081
